client/src/stylesheets/Comment.css
.comment-cards {
  background-color: #fff;
  margin: 20px 20px 20px 0px;
  padding: 20px;
  border: solid 2px black;
  border-radius: 10px;
  display: flex;
  flex-direction: column;
}

.comment-cards > div {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.comment-user {
  display: flex;
  align-items: center;
  gap: 10px;
}

.comment-author {
  margin: 0;
  font-weight: bold;
  font-style: normal;
}

.comment-date {
  margin: 0;
  font-size: 0.9em;
}

.comment-action {
  margin-left: auto;
  font-style: normal;
  display: flex;
  align-items: center;
  gap: 5px;
}

.user-link {
  text-decoration: none;
  color: inherit;
}

